@@ -14,6 +14,8 @@ module Heirloom
                              :required => [:base_prefix, :name, :id, :output],
                              :config   => @config
 
+        ensure_directory :path => @opts[:output], :config => @config
+
         @archive = Archive.new :name   => @opts[:name],
                                :id     => @opts[:id],
                                :config => @config
